delete item caches
